--- a/src/main/resources/assets/echoing_tools/lang/he_il.json
+++ b/src/main/resources/assets/echoing_tools/lang/he_il.json
@@ -36,5 +36,6 @@
   "advancements.echoing_tools.obtain_sculk_hoe.title": "הקדשה מדהימה",
   "advancements.echoing_tools.obtain_sculk_hoe.description": "השתמש במטיל הדהוד על מנת לשדרג מעדר, ותשקול למה לא הקשבת למוחך שאמר לך להפסיק לשדרג את המעדר",
   "advancements.echoing_tools.root.title": "כלים מהדהדים",
-  "advancements.echoing_tools.root.description": "המסע המהדהד שלך החל"
+  "advancements.echoing_tools.root.description": "המסע המהדהד שלך החל",
+  "enchantment.echoing_tools.spread": "התפשטות"
 }
